# a2a-t-sdk-python

./: .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml
docs/: TASKS.md
docs/en/: developer_guide.md  user_guide.md
docs/zh/: 开发指南.md  用户指南.md
package_data/: .env  env.example
package_data/prompt_resources/scenarios/en-US/: scenarios.json
package_data/prompt_resources/scenarios/zh-CN/: scenarios.json
src/a2a_t/: __init__.py
src/a2a_t/client/: __init__.py  a2at_client.py
src/a2a_t/client/negotiation/: __init__.py  negotiation_orchestrator.py  negotiation_orchestrator_builder.py
src/a2a_t/client/prompt_generation/: __init__.py  generation_constants.py  input_normalizer.py  models.py  prompt_generation_orchestrator.py  prompt_generation_orchestrator_builder.py
src/a2a_t/common/: __init__.py  resource_roots.py
src/a2a_t/common/prompt_resources/: __init__.py  _base.py  cache.py  catalog.py  errors.py  local_resources.py  models.py  prompt_resource_loader.py  providers.py  registry.py  scenario_loader.py  slot_json_schema_loader.py  slot_schema_loader.py  source.py  template_loader.py
src/a2a_t/common/prompt_runtime/: __init__.py  prompt_runtime_components.py  (+1 more)
src/a2a_t/config/: __init__.py  errors.py  models.py  source.py
src/a2a_t/llm/: __init__.py  base.py  client.py  errors.py  factory.py  models.py  session_store.py
src/a2a_t/prompt/: __init__.py
src/a2a_t/server/: __init__.py  a2at_server.py
tests/: .env  __init__.py  test_support.py  test_version.py
tests/client_prompt/: test_a2a_t_task_prompt_renderer.py  test_a2at_client.py  test_input_normalizer.py  test_orchestrator.py  test_orchestrator_fallback.py  test_prompt_generation_orchestrator_builder.py
tests/common/: test_prompt_runtime_common.py
tests/llm/: test_base_chat_flow.py  test_client.py  test_client_factory.py  test_composed_adapter.py  test_config_loader.py  test_factory.py  test_legacy_api_removed.py  test_openai_compatible_adapter.py  test_openai_compatible_client.py  test_public_exports.py  test_session_store.py
tests/negotiation/: test_handling_runtime.py  test_models_runtime.py  test_orchestrator_builders.py  test_orchestrators.py  test_parser.py  test_store.py  test_store_factory.py  test_types.py
tests/prompt/: test_config.py
tests/prompt_analysis/: test_scenario_recognizer.py  test_scenario_resolution_orchestrator.py  test_slot_extractor.py
tests/prompt_builders/: __init__.py
tests/prompt_common/: test_a2a_t_task_prompt.py
tests/prompt_compliance/: test_a2at_server.py  test_config.py  test_integration_runtime.py  test_prompt_compliance_orchestrator_builder.py  test_semantic_slot_validator.py  test_service_runtime.py  test_subscribe_incident_slot_schema_constraints.py
tests/prompt_resources/: __init__.py  test_default_package_resources.py  test_loaders.py  test_slot_json_schema_loader.py
tests/prompt_validation/: test_guardrails.py  test_json_schema_slot_validator.py  test_slot_validator.py
tests/test_llm/: test_base_chat_flow.py  test_client.py  test_deepseek_adapter.py  test_session_store.py
(+89 files in other folders)
