[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project]
name = "a2a-t-sdk"
version = "0.1.0"
description = "Python A2A SDK for Telecom Scenarios"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
    { name = "A2A SDK Team" },
]
keywords = ["a2a", "agent", "telecom", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "a2a-sdk @ git+https://github.com/a2aproject/a2a-python.git@v1.0.0-alpha.0",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.36",
    "sse-starlette>=2.1.3",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "jsonschema>=4.23.0",
    "packaging>=24.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.32.0",
    "openai",
]

[project.optional-dependencies]
grpc = ["grpcio>=1.62.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/a2a/a2a-t-sdk"
Documentation = "https://github.com/a2a/a2a-t-sdk#readme"

[tool.uv.build-backend]
module-name = "a2a_t"
source-exclude = [".gitignore"]
data = { data = "package_data" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
