[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project]
name = "a2a-t-sdk"
version = "0.1.3"
description = "Python A2A SDK for Telecom Scenarios"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "A2A SDK Team" },
]
keywords = ["a2a", "agent", "telecom", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jsonschema>=4.23.0",
    "python-dotenv>=1.1.0",
    "openai",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/a2a/a2a-t-sdk"
Documentation = "https://github.com/a2a/a2a-t-sdk#readme"

[tool.uv.build-backend]
module-name = "a2a_t"
source-exclude = [".gitignore"]
data = { data = "package_data" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
